--- a/templates/3Dscene/babylon_scene.html.twig
+++ b/templates/3Dscene/babylon_scene.html.twig
@@ -7,6 +7,8 @@
     <script src="https://cdn.babylonjs.com/babylon.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@simonwep/pickr/dist/themes/nano.min.css">
     <script src="https://cdn.jsdelivr.net/npm/@simonwep/pickr/dist/pickr.min.js"></script>
+    <script src="https://cdn.babylonjs.com/loaders/babylonjs.loaders.min.js"></script>
+
     <style>
         body {
             margin: 0;
@@ -29,6 +31,6 @@
     </div>
 
     <canvas id="renderCanvas"></canvas>
-    <script src="{{ asset('js/main.js') }}"></script>
+    <script src="{{ asset('js/testBlender.js') }}"></script>
 </body>
 </html>
