--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Babylon.JS Simple Project</title>
+    <script src="https://cdn.jsdelivr.net/npm/cannon@0.6.2/build/cannon.min.js"></script>
     <script src="https://cdn.babylonjs.com/babylon.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@simonwep/pickr/dist/themes/nano.min.css">
     <script src="https://cdn.jsdelivr.net/npm/@simonwep/pickr/dist/pickr.min.js"></script>
@@ -29,6 +30,7 @@
         <label for="brightnessInput" style="display: block; margin-bottom: 10px;">Brightness:</label>
         <input type="range" id="brightnessInput" min="0.1" max="2" step="0.1" value="1" style="width: 100%;">
     </div>
+    <div id="cursor" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); width: 10px; height: 10px; background-color: white; border-radius: 50%; z-index: 100;"></div>
 
     <canvas id="renderCanvas"></canvas>
     <script src="{{ asset('js/testBlender.js') }}"></script>
