--- a/templates/3Dscene/babylon_scene.html.twig
+++ b/templates/3Dscene/babylon_scene.html.twig
@@ -18,7 +18,7 @@
             display: block;
         }
         .pickr {
-            width: 300px !important; /* Ajustez selon vos besoins */
+            width: 300px !important;
         }
     </style>
 </head>
@@ -30,7 +30,10 @@
         <input type="range" id="brightnessInput" min="0.1" max="2" step="0.1" value="1" style="width: 100%; height: 40px;">
     </div>
 
-    <canvas id="renderCanvas"></canvas>
+    <div id="renderCanvas"     
+     data-config="{{ config|json_encode|raw }}">
+    </div>
+
     <script src="{{ asset('js/testBlender.js') }}"></script>
 </body>
 </html>
