--- a/templates/3Dscene/babylon_scene.html.twig
+++ b/templates/3Dscene/babylon_scene.html.twig
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Babylon.JS Simple Project</title>
+    <title>TEST | Babylon.JS Simple Project</title>
     <script src="https://cdn.babylonjs.com/babylon.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@simonwep/pickr/dist/themes/nano.min.css">
     <script src="https://cdn.jsdelivr.net/npm/@simonwep/pickr/dist/pickr.min.js"></script>
     <script src="https://cdn.babylonjs.com/loaders/babylonjs.loaders.min.js"></script>
+    <!-- define cannon.js as a module -->
+    <script src = "https://cdn.babylonjs.com/cannon.js"></script>
 
     <style>
         body {
@@ -30,10 +32,32 @@
         <input type="range" id="brightnessInput" min="0.1" max="2" step="0.1" value="1" style="width: 100%; height: 40px;">
     </div>
 
-    <div id="renderCanvas"     
-     data-config="{{ config|json_encode|raw }}">
-    </div>
+    <canvas id="renderCanvas" style="width: 100%; height: 100%;"></canvas>
 
-    <script src="{{ asset('js/testBlender.js') }}"></script>
+
+    <!-- with this method the script is executed from the server memory. We use a blob object created from the script content
+    obtained by API fetching instead of the real script, the script src is then the blob object URL. The blob act like a clone 
+    protecting the real script -->
+    <script>
+        document.addEventListener("DOMContentLoaded", async function() {
+            try {
+                // get the script content from the server
+                const response = await fetch('/api/script');
+                if (!response.ok) throw new Error("Failed to fetch script");
+
+                const scriptContent = await response.text();
+
+                // create a blob object from the script content
+                const blob = new Blob([scriptContent], { type: 'application/javascript' });
+                const scriptUrl = URL.createObjectURL(blob);
+                const script = document.createElement("script");
+                script.src = scriptUrl;
+                document.body.appendChild(script);
+            } catch (error) {
+                console.error("Error loading script:", error);
+            }
+        });
+    </script>
+
 </body>
 </html>
