--- a/templates/3Dscene/babylon_scene.html.twig
+++ b/templates/3Dscene/babylon_scene.html.twig
@@ -32,6 +32,10 @@
         <input type="range" id="brightnessInput" min="0.1" max="2" step="0.1" value="1" style="width: 100%; height: 40px;">
     </div>
 
+    <!-- draw a circle_cursor at the middle of the screen -->
+
+    <div id="cursor" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); width: 20px; height: 20px; border-radius: 50%; background-color: white;"></div>
+
     <canvas id="renderCanvas" style="width: 100%; height: 100%;"></canvas>
 
 
@@ -51,10 +55,9 @@
 
                 if(!scriptPath) throw new Error("No script path found in config");
 
-                const scriptResponse = await fetch(scriptPath);
-                if (!scriptResponse.ok) throw new Error("Failed to fetch script");
 
-                const scriptContent = await scriptResponse.text();
+                //get the injected script from the Home controller                    
+                const scriptContent = {{ scriptContent|raw }};      
 
                 // create a blob object from the script content
                 const blob = new Blob([scriptContent], { type: 'application/javascript' });
